unpackaged/main/default/objects/SLCA2__CA_test__c/fields/SLCA2__Start__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__Start__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>