unpackaged/main/default/objects/SLCA2__CA_test__c/fields/SLCA2__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>